--- a/ShoppingAppAngular/shopp_app_angular/src/index.html
+++ b/ShoppingAppAngular/shopp_app_angular/src/index.html
@@ -11,6 +11,7 @@
   <!-- <app-home></app-home> -->
   <!-- <app-product-detail></app-product-detail> -->
   <!-- <app-order></app-order> -->
+  <!-- <app-order-confirm></app-order-confirm> -->
   <app-order-confirm></app-order-confirm>
 </body>
 </html>
