Create shopping app backend

--- a/ShoppingAppAngular/shopp_app_angular/src/index.html
+++ b/ShoppingAppAngular/shopp_app_angular/src/index.html
@@ -12,6 +12,7 @@
   <!-- <app-product-detail></app-product-detail> -->
   <!-- <app-order></app-order> -->
   <!-- <app-order-confirm></app-order-confirm> -->
-  <app-order-confirm></app-order-confirm>
+  <!-- <app-order-confirm></app-order-confirm> -->
+  <app-signup></app-signup>
 </body>
 </html>
